==> MalcolmWilliams/MSP432_Swarm/CCS_Workspace/MSP432_Swarm_CCS/IMU/I2Cdev.cpp <==
#include "I2Cdev.h"

int8_t I2Cdev::readWords(uint8_t devAddr, uint8_t regAddr, uint8_t length, uint16_t *data, uint16_t timeout) {

    int count = 0;
    int k;

    UCB0I2CSA = devAddr;

    for (k = 0; k < length*2; k ++) {

        while (UCB0CTLW0 & UCTXSTP);                      // Ensure stop condition got sent
        UCB0CTLW0 |= UCTR | UCTXSTT;                      // I2C TX, start condition
        while ((UCB0IFG & UCTXIFG0)==0) {if(UCB0IFG & UCNACKIFG) break;}    //if nack, release the line
        UCB0TXBUF = regAddr;
        while ((UCB0IFG & UCTXIFG0)==0) {if(UCB0IFG & UCNACKIFG) break;}    //if nack, release the line
        UCB0CTLW0 |= UCTXSTP;

        while (UCB0CTLW0 & UCTXSTP);                      // Ensure stop condition got sent
        UCB0CTLW0 &= ~UCTR;                      // I2C RX
        UCB0CTLW0 |= UCTXSTT;                      // start condition
        while ((UCB0IFG & UCTXIFG0)==0) {if(UCB0IFG & UCNACKIFG) break;}    //if nack, release the line
        data[count] = UCB0RXBUF << 8;
        while ((UCB0IFG & UCTXIFG0)==0) {if(UCB0IFG & UCNACKIFG) break;}    //if nack, release the line
        data[count] |= UCB0RXBUF;
        UCB0CTLW0 |= UCTXSTP;                     // I2C stop condition
        count++;
        regAddr++;
    }

    return count;
}

bool I2Cdev::writeBytes(uint8_t devAddr, uint8_t regAddr, uint8_t length, uint8_t* data) {

	UCB0I2CSA = 0x68;  //only for testing

    setTxBuf(regAddr);  //prep the data to be sent, will be sent when the start condition is met.

    UCB0CTLW0 |= UCTR | UCTXSTT;

        P6OUT |= BIT0;
    P6OUT &= ~BIT0;

    while(isISRComplete) {}   //wait until interrupt returns that it is ok to send more data
    isrComplete(false);

    uint8_t i;
    for (i = 0; i < length; i++) {

        UCB0TXBUF = data[i];
        //setTxBuf(data[i]);

        while(isISRComplete) {}
        isrComplete(false);
    }

    UCB0CTLW0 |= UCTXSTP;

    return 1;
}

bool I2Cdev::writeWords(uint8_t devAddr, uint8_t regAddr, uint8_t length, uint16_t* data) {

    while (UCB0CTLW0 & UCTXSTP);                      // Ensure stop condition got sent
    UCB0CTLW0 |= UCTR | UCTXSTT;                      // I2C TX, start condition
    while ((UCB0IFG & UCTXIFG0)==0) {if(UCB0IFG & UCNACKIFG) break;}    //if nack, release the line
    UCB0TXBUF = regAddr;

    uint8_t i;
    for (i = 0; i < length*2; i++) {
        while ((UCB0IFG & UCTXIFG0)==0) {if(UCB0IFG & UCNACKIFG) break;}    //if nack, release the line
        UCB0TXBUF = (data[i++] >> 8);	//send MSB
        while ((UCB0IFG & UCTXIFG0)==0) {if(UCB0IFG & UCNACKIFG) break;}    //if nack, release the line
        UCB0TXBUF = (data[i]);	//send LSB
    }

    while ((UCB0IFG & UCTXIFG0)==0) {if(UCB0IFG & UCNACKIFG) break;}    //if nack, release the line
    UCB0CTLW0 |= UCTXSTP;

    return 1;
}
